<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwatCore</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_courseoverview">CourseOverview</string>
    <string name="title_activity_addreview">AddReview</string>
    <string name="courseoverview_pageheader">Course Overview</string>
    <string name="courseoverview_TitleLabel">Title: </string>
    <string name="courseoverview_TitleValue">*Course Title*</string>
    <string name="courseoverview_insLabel">Instructors:</string>
    <string name="icprofile_pageheader">Instructor-Course Profile</string>
    <string name="icprofile_CourseLabel">Course: </string>
    <string name="icprofile_CourseValue">*Course Title*</string>
    <string name="icprofile_InsLabel">Instructor: </string>
    <string name="icprofile_InsValue">*Instructor Name*</string>
    <string name="icprofile_ReviewsLabel">Reviews (loading...):</string>
    <string name="noresults_msg">No Results Found</string>
    <string name="title_activity_icprofile">MainActivity</string>
    <string name="icprofile_addreviewbutton">Add Review</string>
    <string name="main_searchbutton">Find</string>
    <string name="main_subjSpin">Subject</string>
    <string name="main_instructorHint">Instructor</string>
    <string name="addreview_pageheader">Add New Review</string>
    <string name="addreview_qualityLabel">"Course Quality: "</string>
    <string name="addReview_emailLabel">"Email: "</string>
    <string name="addReview_reviewLabel">"Review: "</string>
    <string name="addReview_submitButton">Create</string>
    <string name="addReview_outoften">/10</string>

    <string name="addreview_difficultyLabel">&quot;Difficulty: &quot;</string>
    <string name="icprofile_RatingsLabel">Average Ratings:</string>
    <string name="Loading">Loading, please wait...</string>
    <string name="icprofile_addreviewbuttondesc">Add review button</string>
    <string name="addreview_submitbuttondesc">Submit Button</string>
    <string name="main_findbuttondesc">Find button</string>

</resources>
