<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IcprofileActivity" >
    
    <TextView
        android:id="@+id/icprofile_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/icprofile_pageheader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/icprofile_titlelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/icprofile_header"
        android:layout_marginTop="21dp"
        android:text="@string/icprofile_CourseLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/icprofile_titleValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/icprofile_titlelabel"
        android:layout_marginLeft="39dp"
        android:layout_toRightOf="@+id/icprofile_titlelabel"
        android:text="@string/icprofile_CourseValue"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/icprofile_insLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/icprofile_titlelabel"
        android:text="@string/icprofile_InsLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/icprofile_insValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/icprofile_insLabel"
        android:layout_alignLeft="@+id/icprofile_titleValue"
        android:text="@string/icprofile_InsValue"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/icprofile_ReviewsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/icprofile_insLabel"
        android:layout_marginTop="20dp"
        android:text="@string/icprofile_ReviewsLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/icprofile_ReviewsLabel"
        tools:listitem="@android:layout/simple_expandable_list_item_2" >

    </ListView>

    <Button
        android:id="@+id/icprofile_addbutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/icprofile_ReviewsLabel"
        android:layout_alignBottom="@+id/icprofile_ReviewsLabel"
        android:layout_alignRight="@+id/icprofile_header"
        android:onClick="onAddButtonClick"
        android:text="@string/icprofile_addreviewbutton" />

</RelativeLayout>
