<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseOverviewActivity" >

    <TextView
        android:id="@+id/courseoverview_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/courseoverview_pageheader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/courseoverview_titlelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/courseoverview_header"
        android:layout_marginTop="21dp"
        android:text="@string/courseoverview_TitleLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/courseoverview_titleValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/courseoverview_titlelabel"
        android:layout_alignLeft="@+id/courseoverview_header"
        android:text="@string/courseoverview_TitleValue"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseoverview_titlelabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" >
    </ListView>

    <TextView
        android:id="@+id/insLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/courseoverview_titlelabel"
        android:text="@string/courseoverview_insLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
