<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <!-- android:background="#cdcdcd" -->

     <ImageButton
         android:id="@+id/find_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="44dp"
         android:background="#00000000"
         android:contentDescription="@string/main_findbuttondesc"
         android:src="@drawable/find_button" />

     <EditText
         android:id="@+id/insSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/subjSpin"
         android:layout_below="@+id/subjSpin"
         android:layout_marginTop="22dp"
         android:ems="10"
         android:hint="@string/main_instructorHint"
         android:inputType="textShortMessage" >

         <requestFocus />
     </EditText>

     <Spinner
         android:id="@+id/subjSpin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="27dp"
         android:prompt="@string/main_subjSpin" />

</RelativeLayout>
