<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/icprofile_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/addreview_pageheader"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/addReview_emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addReview_scoreLabel"
        android:layout_below="@+id/addReview_scoreValue"
        android:layout_marginTop="16dp"
        android:text="@string/addReview_emailLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addReview_emailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addReview_emailLabel"
        android:layout_alignBottom="@+id/addReview_emailLabel"
        android:layout_alignLeft="@+id/addReview_scoreValue"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/addReview_scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addReview_scoreValue"
        android:layout_alignBottom="@+id/addReview_scoreValue"
        android:layout_toLeftOf="@+id/icprofile_header"
        android:text="@string/addreview_scoreLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addReview_scoreValue"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/icprofile_header"
        android:layout_below="@+id/icprofile_header"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/addReview_reviewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addReview_emailLabel"
        android:layout_below="@+id/addReview_emailValue"
        android:layout_marginTop="26dp"
        android:text="@string/addReview_reviewLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addReview_reviewValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addReview_reviewLabel"
        android:layout_alignRight="@+id/addReview_emailValue"
        android:layout_below="@+id/addReview_reviewLabel"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/addReview_submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:onClick="onSubmitButtonClick"
        android:text="@string/addReview_submitButton" />

</RelativeLayout>
